[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://LD51.gd" type="Script" id=2]
[ext_resource path="res://LD51Backdrop.png" type="Texture" id=3]
[ext_resource path="res://LD51_Playing.ogg" type="AudioStream" id=4]
[ext_resource path="res://LD51_Narrator.ogg" type="AudioStream" id=5]
[ext_resource path="res://New Piskel.png" type="Texture" id=6]
[ext_resource path="res://Abel-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="LD51" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Ld51Backdrop" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 8, 8 )
texture = ExtResource( 3 )

[node name="Duck" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )

[node name="Dialog" parent="." instance=ExtResource( 1 )]
margin_left = 535.0
margin_top = 438.0
margin_right = 535.0
margin_bottom = 438.0
timeline = "timeline-1664581359.json"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="PointLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 2
theme = SubResource( 2 )
align = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="dialogic_signal" from="Dialog" to="." method="_on_Dialog_dialogic_signal"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
